assets/css/style.css
:root {
    --color-one: #d387b8;
    --color-two: #F299c1;
    --color-three: #98a9d7;
    --color-four: #7470b2;
    --color-five: #fff;
    --horizontal-padding: 82px;
    --vertical-padding: 96px;
    --horizontal-padding-cutted: calc(var(--horizontal-padding) - 15px);
}

html {
    font-size: 14px;
}

a {
    text-decoration: none !important;
}

.border-button-link {
    padding: 7px 20px;
    border: 1px solid var(--color-one);
    color: var(--color-five);
    border-radius: .3rem;
    height: 30px;
}

.border-button-link:hover {
    background-color: var(--color-two);
    border: 1px solid var(--color-two);
    color: var(--color-five) !important;
}

.border-button-link-2 {
    padding: 7px 20px;
    border: 1px solid var(--color-one);
    color: var(--color-two) !important;
    border-radius: .3rem;
    width: fit-content;
    height: 30px;
}

.border-button-link-2:hover {
    background-color: var(--color-two);
    border: 1px solid var(--color-two);
    color: var(--color-five) !important;
}

.links-mobile li a {
    color: var(--color-one) !important;
    font-weight: 500;
}

.links-mobile li.uk-active a {
    color: #62646a !important;
    font-weight: 700;
    border-bottom: 1px solid #62646a;
}

.links-mobile li.uk-active a:hover {
    color: #62646a !important;
}

.links-mobile li a:hover {
    color: var(--color-two) !important;
}

.nav-container {
    width: 100%;
}

.nav-link {
    padding: 7px 10px;
}

.nav-link:focus, .nav-link:hover {
    color: var(--color-two);
}

.main-nav {
    position: fixed;
    display: flex;
    justify-content: space-between;
    padding: 15px var(--horizontal-padding);
    color: white;
    width: 100%;
    flex-wrap: nowrap;
    margin: auto;
    transition: background-color .3s;
    z-index: 997;
}

.nav-link{
    color: white;
    display: flex;
    font-weight: 500;
    align-items: center;
}

.nav-link:hover {
    color: var(--color-two) !important;
}

.search-bar {
    width: unset;
    max-width: 100%;    
    height: 34px;
}

.search-bar input, .search-bar input:hover, .search-bar input:focus, .search-bar input:active{
    height: 34px;
}

.nav-container .search-bar {
    visibility: hidden;
}

.search-btn {
    background-color: var(--color-one);
    color: var(--color-five);
    border-color: var(--color-one);
}

.search-btn:hover {
    background-color: var(--color-one);
    color: var(--color-five);
    border-color: var(--color-one);
}

.logo {
    width: 200px;
}

.search-input, .search-input:focus, .search-input:hover, .search-input:active{
    border: 1px solid var(--color-one) !important;
    height: 50px;
}

.hero {
    background: url('../img/hero.jpg') no-repeat;
    background-size: cover;
    min-height: 100vh;
    padding: 0px var(--horizontal-padding);
    color: white;
}

.hero h1 {
    color: white;
}

.circle-link {
    border: 1px solid var(--color-one);
    border-radius: 10px;
    padding: 1px 10px;
    color: var(--color-one);
}

.circle-link:hover {
    border: 1px solid var(--color-one);
    background-color: var(--color-one);
    color: var(--color-five);
}

.services {
    padding: 0px var(--horizontal-padding) var(--vertical-padding) var(--horizontal-padding);
}

.partners {
    margin-bottom: var(--vertical-padding);
    height: 95px;
    color: #62646a;
    font-size: 16px;
    padding: 0px var(--horizontal-padding);
    background-color: #f5f5fb;
}

.partners-icons img{
    padding-left: 60px;
}

.uk-panel {
    width: fit-content;
}

.arrow-next-slide {
    background: white !important;
    border-radius: 100% !important;
    color: #62646a !important;
    padding: 10px 15px !important;
    box-shadow: 0px 0px 10px #0000006b !important;
}

.card-text {
    padding: 16px;
}

.benefits, .business {
    background-color: rgb(187, 194, 216);
    padding: var(--vertical-padding) var(--horizontal-padding);
}

.business {
    padding: var(--vertical-padding) var(--horizontal-padding);
}

.benefits-texts, .announce-texts, .business-texts {
    padding-left: 16px;
    padding-right: 140px;
}

.svg-ok {
    fill: #62646A;
    min-width: 30px !important;
    min-height: 30px !important;
    max-width: 30px !important;
    max-height: 30px !important;
}

.benefits-img {
    border-radius: 2px;
}

.benefits-title, .business-title {
    padding-bottom: 24px;
}

.benefits-topic-title, .business-topic-title {
    padding-bottom: 12px;
}

.benefits-topic-paragraph {
    padding-bottom: 24px;
    color: #62646A;
}

.explore {
    padding: var(--vertical-padding) var(--horizontal-padding);
}

.card-img-explore {
    position: relative;
    display: block;
    width: 48px;
    height: 48px;
    margin: 0 auto 15px;
}

.line-item {
    width: 48px;
    height: 3px !important;
    background-color: var(--color-four);
    transition: .3s all;
    margin-bottom: 14px;
}

.explore h1 {
    padding-bottom: 64px;
}

.explore .row .col {
    cursor: pointer;
}

.explore .row .col:hover .line-item {
    width: 88px;
    background-color: var(--color-one);
}

.benefits-topic-title-2 {
    padding-bottom: 12px;
}

.more-about {
    margin-top: 48px;
    padding: 12px 24px; 
    font-size: 16px; 
    font-weight: 700;
}

.shift-section {
    padding: var(--vertical-padding) var(--horizontal-padding-cutted);
}

.cartaz .founder-text{
    padding: 0px 68px 0px 64px;
}

.cartaz-items li {
    padding: 0px 15px;
}

.announce-texts, .banner-snippet {
    margin-top: var(--vertical-padding);
    background-color: var(--color-two); 
    padding: 36px 76px;
}

.announce-texts h3 {
    padding-bottom: 16px;
}

.fw-700 {
    font-weight: 700;
}

.announce-topic-title {
    padding-bottom: 24px;
}

.float-text {
    background-color: rgb(255, 255, 255);
    font-size: 12px;
    border-radius: 20px; 
    padding: 5px; 
    font-weight: 800; 
    height: fit-content;
}

.founder-paragraph {
    color: #7a7d85; 
    font-size: 16px; 
    font-weight: 500;
}

.founder-text {
    color: var(--color-one); 
    font-size: 25px;
}

.founder-paragraph img {
    height: 36px;
}

.user-block {
    padding: 16px 0px 12px 16px;
}

.date-paragraph {
    color: #95979d;
}

.more-projects {
    padding: var(--vertical-padding) var(--horizontal-padding);
    background-color: #f5f5f5;
}

.guides {
    padding: var(--vertical-padding) var(--horizontal-padding);
}

.guide-img {
    margin-bottom: 16px;
}


.c-white {
    color: white !important;
}

.banner-snippet {
    min-height:  440px;
    padding: 0px var(--horizontal-padding) var(--vertical-padding) var(--horizontal-padding);
    background-color: rgba(0, 0, 0, 0);
}

.banner-texts {
    background: url("../img/banner-snippet/background.png");
    padding: 120px var(--horizontal-padding);
}

.banner-texts  h1{
    font-size: 48px;
}

.btn-width {
    max-width: fit-content;
}

.p-40 {
    padding-bottom: 40px;
}

.footer {
    padding: var(--vertical-padding) var(--horizontal-padding);
    font-size: 16px;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.footer-title {
    margin-bottom: 20px;
}

.footer-link {
    margin-bottom: 16px;
    color: #62646a;
}

.footer-link:hover, .footer-link:active {
    color: #62646a;
    text-decoration: underline !important;
}

@media only screen and (max-width: 1200px) {
    .benefits-texts, .benefits-img, .business-texts {
        padding: 0px 16px;
    }

    .benefits-texts, .business-texts {
        padding-bottom: 24px;
    }

    .benefits-img-container {
        justify-content: center;
    }

    .benefits-img {
        min-width: 100%;
    }

    .business-img {
        padding-top: 24px;
    }

    .hero {
        align-items: center;
    }

    .banner-snippet {
        padding: 0px !important;
    }

    .shift-section {
        padding: 0px !important;
    }

    .cartaz-container {
        padding: var(--vertical-padding) var(--horizontal-padding-cutted);
    }

    .announce-texts, .banner-snippet {
        margin-top: 0px !important;
    }

}

.services .uk-active {
    display: flex;
    justify-content: center;
}

.more-projects-card-img {
    width: 100% !important;
}

.more-projects .uk-panel {
    width: unset;
}

@media only screen and (max-width: 805px) {
    .banner-texts h1 {
        font-size: calc(1.4rem + 1.5vw);
    }
}

@media only screen and (max-width: 550px) {
    :root {
        --horizontal-padding: 62px;
    }
    .cartaz .founder-text {
        padding: 0px 48px 0px 44px;
    }
    .founder-paragraph{
        text-align: center;
    }
}

@media only screen and (max-width: 400px) {
    :root {
        --horizontal-padding: 32px;
    }
    .banner-texts h1 {
        font-size: calc(1.3rem + 1.5vw);
    }
}

.services-title-container {
    padding: 0px 15px;
}

.mobile-menu {
    z-index: 999;
}

.uk-offcanvas-bar {
    background-color: #fff;
}

.mobile-menu-button {
    border: none;
    padding: 0;
}

.mobile-menu-icon rect {
    fill: var(--color-one);
}

@keyframes showMenu {
    from {
        clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
    }
    to {
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
    }
}

